--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
             <img class="header__img" src="assets/img/headerlogo.png" alt="">
             <input type="checkbox" class="show_mess_btn" hidden id="message">
             <label for="message" class="cute_sticker">
-                <div class="sticker1" aria-label="Nhãn dán  bounching, cat bouncing up and down" role="img" tabindex="-1" style="background-image: url(&quot;https://scontent.xx.fbcdn.net/v/t39.1997-6/45282049_338938503592475_8358254821874073600_n.webp?_nc_cat=1&ccb=1-5&_nc_sid=0572db&_nc_ohc=YNMGqyMjhjEAX9jkzmZ&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=00_AT-scC7W6DYQjxOhyGbXrcQ59l2UuQo2GQ0yHwbYPEsMdQ&oe=62197405;); background-repeat: no-repeat; background-size: 128px 128px; cursor: default;margin-left: 20px; height: 128px; width: 128px;">
+                <div class="sticker1" aria-label="Nhãn dán  bounching, cat bouncing up and down" role="img" tabindex="-1" style="background-image: url(/assets/img/45282049_338938503592475_8358254821874073600_n.webp); background-repeat: no-repeat; background-size: 128px 128px; cursor: default;margin-left: 20px; height: 128px; width: 128px;">
                 </div>
                 <div class="press_message">
                     Nhấp chuột vào em ik ><
@@ -35,7 +35,7 @@
             </label>
             <div class="header_contact_info">
                 <label for="message">
-                    <div class="sticker1" aria-label="Nhãn dán  hiding, cat hiding in box" role="img" tabindex="-1" style="background-image: url(&quot;https://scontent.xx.fbcdn.net/v/t39.1997-6/45282049_338938503592475_8358254821874073600_n.webp?_nc_cat=1&ccb=1-5&_nc_sid=0572db&_nc_ohc=YNMGqyMjhjEAX9jkzmZ&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=00_AT-scC7W6DYQjxOhyGbXrcQ59l2UuQo2GQ0yHwbYPEsMdQ&oe=62197405); background-repeat: no-repeat; background-size: 128px 128px; cursor: default; height: 128px; width: 128px;">
+                    <div class="sticker1" aria-label="Nhãn dán  hiding, cat hiding in box" role="img" tabindex="-1" style="background-image: url(/assets/img/45282049_338938503592475_8358254821874073600_n.webp); background-repeat: no-repeat; background-size: 128px 128px; cursor: default; height: 128px; width: 128px;">
                     </div>
                     <div class="press_message">
                         Đọc xong rồi thì nhấp lần nữa để ẩn đi nhó ^^
