--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             </label>
             <div class="header_contact_info">
                 <label for="message">
-                    <div class="sticker1" aria-label="Nhãn dán  hiding, cat hiding in box" role="img" tabindex="-1" style="background-image: url(/assets/img/45282049_338938503592475_8358254821874073600_n.webp); background-repeat: no-repeat; background-size: 128px 128px; cursor: default; height: 128px; width: 128px;">
+                    <div class="sticker1" aria-label="Nhãn dán  hiding, cat hiding in box" role="img" tabindex="-1" style="background-image: url(/assets/img/2.webp); background-repeat: no-repeat; background-size: 128px 128px; cursor: default; height: 128px; width: 128px;">
                     </div>
                     <div class="press_message">
                         Đọc xong rồi thì nhấp lần nữa để ẩn đi nhó ^^
